--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Smart Traffic Light</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Smart 4-Way Traffic Light</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Smart Traffic Light</h2>
 
-  <input type="number" id="vehicleCount" placeholder="Enter vehicle count" min="0" />
-  <button onclick="startSignal()">Start</button>
+  <h2>🚦 Smart 4-Way Traffic System</h2>
 
+  <div>
+    <label>North:</label>
+    <input type="number" id="north" min="0" value="0">
+    <label>East:</label>
+    <input type="number" id="east" min="0" value="0">
+    <label>South:</label>
+    <input type="number" id="south" min="0" value="0">
+    <label>West:</label>
+    <input type="number" id="west" min="0" value="0">
+  </div>
+
+  <button onclick="startCycle()">Start Traffic</button>
   <div id="countdown"></div>
 
-  <div class="traffic-light">
-    <div class="light red" id="red"></div>
-    <div class="light yellow" id="yellow"></div>
-    <div class="light green" id="green"></div>
+  <div class="intersection">
+    <div class="light red" id="northLight"><h2>N</h2></div>
+    <div class="light red" id="eastLight"><h2>E</h2></div>
+    <div class="light red" id="westLight"><h2>W</h2></div>
+    <div class="light red" id="southLight"><h2>S</h2></div>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
