--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 
   <h2>🚦 Smart 4-Way Traffic System</h2>
 
+
   <div>
     <label>North:</label>
-    <input type="number" id="north" min="0" value="0">
+    <input type="number" id="north" min="0" placeholder="vehical count">
     <label>East:</label>
-    <input type="number" id="east" min="0" value="0">
+    <input type="number" id="east" min="0" placeholder="vehical count">
     <label>South:</label>
-    <input type="number" id="south" min="0" value="0">
+    <input type="number" id="south" min="0"placeholder="vehical count" >
     <label>West:</label>
-    <input type="number" id="west" min="0" value="0">
+    <input type="number" id="west" min="0" placeholder="vehical count">
   </div>
 
   <button onclick="startCycle()">Start Traffic</button>
